--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(glm REQUIRED)
 
 #find_package(glfw3 REQUIRED)
 
@@ -17,4 +18,4 @@ set(SOURCE_FILES main.cpp components/Button.cpp components/Button.h util/Shader.
 add_executable(Game ${SOURCE_FILES} components/Button.cpp components/Button.h util/Shader.cpp util/Shader.h components/Rectangle.cpp components/Rectangle.h)
 
 include_directories(${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
-target_link_libraries(Game ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY} opengl32 gdi32 glfw3 glu32 glew32)
+target_link_libraries(Game ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_glu_LIBRARY} ${OPENGL_gl_LIBRARY} opengl32 gdi32 glfw3 glu32 glew32 glm SOIL)
