--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ set(SOURCE_FILES main.cpp components/Button.cpp components/Button.h util/Shader.
         components/Cube.cpp components/Cube.h util/Camera.cpp util/Camera.h components/Player.cpp components/Player.h
         entities/Entity.cpp entities/Entity.h util/Maths.cpp util/Maths.h util/ProjectionMatrix.cpp
         util/ProjectionMatrix.h util/io/Mouse.cpp util/io/Mouse.h util/ObjLoader.cpp util/ObjLoader.h entities/RawModel.cpp
-        entities/RawModel.h entities/Loader.cpp entities/Loader.h
+        entities/RawModel.h entities/Loader.cpp entities/Loader.h components/ObjModel.cpp components/ObjModel.h
         )
 add_executable(Game ${SOURCE_FILES})
 
