--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ CMakeCache.txt
 Game
 Makefile
 cmake_install.cmake
+Game.cbp
+cmake-build-debug/
+Would skip repository includes/Simple-OpenGL-Image-Library/
+includes/compiled/
